--- a/app/src/main/res/layout/fragment_follower.xml
+++ b/app/src/main/res/layout/fragment_follower.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".FollowerFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/content_tab_follower" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFollower"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
