--- a/app/src/main/res/layout/fragment_following.xml
+++ b/app/src/main/res/layout/fragment_following.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".FollowingFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/content_tab_following" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFollowing"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
