--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,10 @@
     <style name="Theme.DanielGithubUsers.AppBarOverlay"
         parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.DanielGithubUsers.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="ButtonOrange">
+        <item name="android:backgroundTint">@color/orange_light</item>
+    </style>
+
 </resources>
