--- a/app/src/main/res/layout/row_favorite.xml
+++ b/app/src/main/res/layout/row_favorite.xml
@@ -18,7 +18,6 @@
         android:padding="8dp">
 
 
-
         <ImageView
             android:id="@+id/img_photo"
             android:layout_width="100dp"
@@ -26,7 +25,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:contentDescription="@string/row_user"
+            android:contentDescription="@string/row_favorite"
             cards:layout_constraintBottom_toBottomOf="parent"
             cards:layout_constraintStart_toStartOf="parent"
             cards:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,6 @@
             cards:layout_constraintStart_toEndOf="@+id/img_photo"
             cards:layout_constraintTop_toTopOf="@+id/img_photo"
             tools:text="username" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
